--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
   <div class="container">
-    <p>Haz click es los siguientes enlaces para visualizar los grids: </p>
+    <p style="margin-top: 20px; font-size:20px;">Haz click en los siguientes enlaces para visualizar los grids: </p>
     <ul>
-      <li><a href="grid1.html">Grid 1</a></li>
-      <li><a href="grid2.html">Grid 2</a></li>
-      <li><a href="grid3.html">Grid 3</a></li>
-      <li><a href="grid4.html">Grid 4</a></li>
-      <li><a href="grid5.html">Grid 5</a></li>
-      <li><a href="grid6.html">Grid 6</a></li>
-      <li><a href="grid7.html">Grid 7</a></li>
-      <li><a href="grid8.html">Grid 8</a></li>
-      <li><a href="grid9.html">Grid 9</a></li>
+      <li><a href="grid1.html" class="enlace">Grid 1</a></li>
+      <li><a href="grid2.html" class="enlace">Grid 2</a></li>
+      <li><a href="grid3.html" class="enlace">Grid 3</a></li>
+      <li><a href="grid4.html" class="enlace">Grid 4</a></li>
+      <li><a href="grid5.html" class="enlace">Grid 5</a></li>
+      <li><a href="grid6.html" class="enlace">Grid 6</a></li>
+      <li><a href="grid7.html" class="enlace">Grid 7</a></li>
+      <li><a href="grid8.html" class="enlace">Grid 8</a></li>
+      <li><a href="grid9.html" class="enlace">Grid 9</a></li>
     </ul>
 </body>
 </html>
